<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_sample" Id="{a4faeeec-d362-4a0a-8330-2df0decfcc5a}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_sample :
STRUCT
	title :STRING;
	name: STRING;
	age: UINT;
	sex: UINT;
	mail_address : STRING;
	event_date : ULINT;
	description : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>