<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{4324bf0b-cbb4-4586-a9e6-d074531d9949}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR

	events : ARRAY [1..5] OF ST_sample := [
		(title := 'Promotion ceremony', name := 'Kenichi Takahashi', age := 10, sex := 1, mail_address := 'ken@example.com', description := 'Pass to the next grade'),
		(title := 'Promotion ceremony', name := 'Takashi Shimizu', age := 18, sex := 1, mail_address := 'takashi@example.com', description := 'Pass to the next grade'),
		(title := 'Promotion ceremony', name := 'Junich Yamada', age := 13, sex := 1, mail_address := 'jun@example.com', description := 'Pass to the next grade'),
		(title := 'Promotion ceremony', name := 'Koichiro Honda', age := 12, sex := 1, mail_address := 'koichi@example.com', description := 'Pass to the next grade'),
		(title := 'Promotion ceremony', name := 'Sojiro Yokota', age := 11, sex := 1, mail_address := 'Sojiro@example.com', description := 'Pass to the next grade')
	];
	
	ads_watch_variable : ST_sample;
	last_dt : ULINT;
	diff_dt : ULINT;
	event_timer :TON;
	i :UINT;
	id : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[event_timer(IN := NOT event_timer.Q, PT := T#10S);

id := id + 1;

IF id = 16#FFFF THEN
	id := 0;
END_IF

//IF event_timer.Q THEN
	IF i < 1 OR i > 5 THEN
		i := 1;
	END_IF
	events[i].age := i + 5;
	ads_watch_variable := events[i];
	ads_watch_variable.event_date := F_GetSystemTime();
	diff_dt := ads_watch_variable.event_date - last_dt;
	last_dt := ads_watch_variable.event_date;
	
	i :=  i + 1;
//END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="37" Count="2" />
      <LineId Id="74" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>